# playgound

./: .gitignore  CMakeLists.txt
src/: AcquiredData.hpp  Container.hpp  ContainerDescriptor.hpp  CudaKernels.cu  CudaKernels.cuh  Event.hpp  EventArguments.h  FileStorage.hpp  HDF5AscanTest.cpp  HDF5AscanTest.h  HDF5CscanTest.cpp  HDF5CscanTest.h  HDF5Test.cpp  HDF5Test.h  Playground.cpp  Playground.h  PlaygroundTest.cpp  SaveImage.hpp  ThreadPool2.h  WebSocketClient.cpp  WebSocketClient.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketTest.cpp  WebSocketTest.h  WebSocketWorker.cpp  WebSocketWorker.h
src/Storage/: AcquiredData.hpp  Data.h  DataContainer.hpp  DataSource.hpp  DatasetBase.hpp  DatasetContainer.hpp  DatasetDefinition.h  DatasetProperties.hpp  DatasetUtil.hpp  DatasetUtils.hpp  H5Utils.hpp  IData.h  IDataset.h  NdtData.hpp  NdtDataReader.hpp  NdtFileReader.hpp  VersionUtils.hpp
src/Storage/Ascans/: AscanBeamDataset.hpp  AscanData.hpp  AscanDataSource.hpp  AscanDataset.hpp  AscanDatasetContainer.hpp  AscanStatusBeamDataset.hpp  AscanStatusDataset.hpp
src/Storage/Cscans/: CscanBeamDataset.hpp  CscanData.hpp  CscanDataSource.hpp  CscanDataset.hpp  CscanDatasetContainer.hpp
src/datasets/: AscanBaseDataSet.hpp  AscanBeamDataSet.hpp  AscanData.hpp  AscanDataDataset.hpp  AscanDataSet.hpp  AscanDataSource.hpp  AscanDataSpace.hpp  AscanMergedBeamDataSet.hpp  AscanMergedBeamStatusDataset.hpp  AscanStatusBeamDataset.hpp  AscanStatusDataset.hpp  AscanStatusMergedBeamDataset.hpp  CscanBaseDataSet.hpp  CscanBeamDataSet.hpp  CscanDataSet.hpp  CscanDataSpace.hpp  CscanMergedBeamDataSet.hpp  DataAccess.h  DataContainer.hpp  DataContainer2.hpp  DataSet.hpp  DataSets.hpp  DataSource.hpp  DataSource2.hpp  Dataset.hpp  Dataset2.hpp  DatasetContainer2.hpp  DatasetDefinition.h  DatasetProperties.hpp  IAscanBeamDataSet.h  IAscanData.h  IAscanDataSet.h  IAscanDataSource.h  IAscanDataVector.hpp  IAscanDatasetVector.hpp  IAscanMergedBeamDataSet.h  IBeamDataSource.h  IConfigurationSource.h  ICscanBeamDataSet.h  ICscanDataSet.h  (+7 more)
src/datasets/ascans/: AscanBeamDataset.hpp  AscanBeamDataset2.hpp  AscanData.hpp  AscanData2.hpp  AscanDataSource.hpp  AscanDataSource2.hpp  AscanDataset.hpp  AscanDataset2.hpp  AscanDatasetBase.hpp  AscanDataspace.hpp  AscanMergedBeamDataset.hpp  AscanStatusBeamDataset.hpp  AscanStatusBeamDataset2.hpp  AscanStatusDataset.hpp  AscanStatusDataset2.hpp  AscanStatusMergedBeamDataset.hpp  IAscanData.h  IAscanDataSource2.h  IAscanDataVector.hpp  IAscanDataset.h  IAscanDatasetVector.hpp  IAscanMergedBeamDataset.h
src/datasets/cscans/: CscanBeamDataset.hpp  CscanData.hpp  CscanDataSource.hpp  CscanDataset.hpp  CscanDataspace.hpp  CscanMergedBeamDataset.hpp
src/tests/: PlaygroundTest.h
support/: Gray.col  Rainbow.col
